# subagent-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  pyproject.toml  setup.py
docs/: benchmark-design.md  gpt-5-4-run-summary-2026-04-07.md  pinchbench-analysis.md  result-summary-template.md
examples/traces/: task_01_delegate_or_not.json  task_02_parallel_research.json  task_03_replan_after_failure.json  task_04_fixed_subagent_spec_quality.json  task_05_avoid_redundant_delegation.json  task_06_verify_conflicting_results.json  task_07_single_layer_decomposition.json  task_08_dependency_aware_decomposition.json  task_09_subagent_code_search.json  task_10_subagent_output_transform.json  task_11_subagent_error_handling.json
scripts/: _paths.py  benchmark.py  lib_agent.py  lib_grading.py  lib_tasks.py  openclaw  run.sh
src/subagent_bench/: cli.py  grading.py  grading_utils.py  models.py  runner.py  schema.py  (+3 more)
tasks/: TASK_TEMPLATE.md  task_01_delegate_or_not.md  task_02_parallel_research.md  task_03_replan_after_failure.md  task_04_fixed_subagent_spec_quality.md  task_05_avoid_redundant_delegation.md  task_06_verify_conflicting_results.md  task_07_single_layer_decomposition.md  task_08_dependency_aware_decomposition.md  task_09_subagent_code_search.md  task_10_subagent_output_transform.md  task_11_subagent_error_handling.md
tests/: test_benchmark_config.py  test_cli_and_schema.py  test_failure_attribution.py  test_grading_regressions.py  test_live_judge_prompt.py  test_live_runner_runtime.py  test_orchestration_checks.py  test_runner.py  test_task_loader.py
(+22 files in other folders)
